--- a/css/navigation-bar.css
+++ b/css/navigation-bar.css
@@ -10,6 +10,10 @@
 .nav__btn{
     font-size: 20px;
 }
+.nav__btn:hover{
+    transform: scale(1.2);
+    color: var(--main-theme-skyblue);
+}
 .nav__list{
 	display: flex;
 	justify-content:space-between;
