--- a/css/navigator.css
+++ b/css/navigator.css
@@ -15,6 +15,11 @@
 .top__navigator__column:nth-child(2) i{
     margin-left: 20px;
 }
+.top__navigator__column  :hover{
+    color: var(--main-theme-skyblue);
+    transform: scale(1.2);
+}
+
 .top__sub__navigator {
     display: flex;
     justify-content: center;
