--- a/css/chat.css
+++ b/css/chat.css
@@ -1,3 +1,4 @@
+
 .chat__nav{
     position: fixed;
     top:23px;
@@ -18,23 +19,54 @@
 .chat__nav__column .fa-search {
    margin-right: 15px;
 }
+@keyframes fadeIn-date{
+    from{
+        opacity: 0;
+        transform: translateY(-10px);
+    }
+    to{
+        opacity: 1;
+    }
+}
+@keyframes fadeIn-chat{
+    from{
+        opacity: 0;
+        transform: translateX(-10px);
+    }
+    to{
+        opacity: 1;
+    }
+}
+@keyframes fadeIn-chat-me{
+    from{
+        opacity: 0;
+        transform: translateX(10px);
+    }
+    to{
+        opacity: 1;
+    }
+}
 .chat__date{
     display: flex;
     justify-content: center;
     margin-top: 120px ;
     text-align: center;
     align-items: center;
+    animation: fadeIn-date 0.5s linear;
 }
+
 .chat__date div{
     color: black;
     padding: 10px 0px 8px 0px;
     width: 200px;
     box-shadow: 0px 1px 3px 3px var(--main-theme-skyblue);
     border-radius: 25px;
+   
 }
 .main__chatting__other{
     display: flex;
     justify-content: flex-start;
+    animation: fadeIn-chat 1s linear;
 }
 .main__chatting{
     margin-top: 50px;
@@ -45,8 +77,11 @@
     height: 60px;
     border-radius: 50%;
     margin-right: 20px;
+    transition: all 0.3s ease-in-out;
 }
-
+.main__chatting__other img:hover{
+    background-color: black;
+}
 .main__chatting__other__text{
     margin-right: 10px;
     margin-top: 10px;
@@ -73,6 +108,7 @@
     justify-content: flex-end;
     margin-top: 20px;
     margin-right: 20px;
+    animation: fadeIn-chat-me 1s linear ;
 }
 .main__chatting__me__time{
     margin-top: 20px;
@@ -113,19 +149,23 @@
     height: 25px;
     border:none;
     border-radius: 25px;
+    transition: all 0.3s ease-in-out;
 }
-.typing__input :focus{
-    width: 90vw;
-    
-}
+
 .typing__input:focus ~ .typing__icons{
     display: none;
 }
-.typing form{
-ß
-    display: flex;
-
+.typing:focus-within input{
+    width:95vw;
+    transform: translateX(-35px)translateY(-50px);
 }
+.typing:focus-within{
+    transform: translateY(50px);
+}
+.typing form{
+    display: flex;
+}
+
 .typing__icons{
    
     color: var(--main-theme-skyblue);
