--- a/css/extra.css
+++ b/css/extra.css
@@ -20,9 +20,10 @@
     box-shadow: 30px 0px 0px 0px var(--main-theme-skyblue);
     margin-left: 30px;
     margin-right: 30px;
+    transition: all 0.3s ease-in-out;
 }
 .more__app__info__icon:hover{
-    transform: scale(1.2);
+    transform: scale(1.2) translateX(-15px);
 }
 .more__app__info__text{
     margin-top: 10px;
